[package]
name = "biquad"
version = "0.6.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
description = "A library for digital second order IIR filters, also known as biquads."
categories = ["embedded", "no-std"]
keywords = ["biquad", "filter", "iir"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/korken89/biquad-rs"
edition = "2024"


[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }

[dev-dependencies]
rand = "0.10.0"



